tests/ui/coherence/impl[t]-foreign[fundamental[t]]-for-fundamental[t].stderr
error[E0210]: type parameter `T` must be used as the argument to some local type (e.g., `MyStruct<T>`)
  --> $DIR/impl[t]-foreign[fundamental[t]]-for-fundamental[t].rs:10:10
   |
LL | impl<'a, T> Remote1<Box<T>> for &'a T {
   |          ^ uncovered type parameter
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for type parameters and opaque types

error[E0210]: type parameter `T` must be used as the argument to some local type (e.g., `MyStruct<T>`)
  --> $DIR/impl[t]-foreign[fundamental[t]]-for-fundamental[t].rs:13:10
   |
LL | impl<'a, T> Remote1<&'a T> for Box<T> {
   |          ^ uncovered type parameter
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local
   = note: only traits defined in the current crate can be implemented for type parameters and opaque types

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0210`.
